src/objects/PSA_Department__c.object
<CustomObject>
    <fields>
        <fullName>PSA_Department_Code__c</fullName>
        <externalId>true</externalId>
        <label>Department Code</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Lookup_Assist__c</fullName>
        <description>Used to enable &quot;all&quot; search functionality on lookups.</description>
        <displayFormat>all {0}</displayFormat>
        <label>PSA Lookup Assist</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PSA_PS_Department__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the department is considered to be part of Professional Services (as it relates to PSA)</description>
        <label>PS Department</label>
        <type>Checkbox</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Department_Code__c</columns>
        <columns>PSA_PS_Department__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>